--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "turtlebot_simulator"]
 	path = turtlebot_simulator
 	url = https://github.com/turtlebot/turtlebot_simulator
+[submodule "turtlebot"]
+	path = turtlebot
+	url = https://github.com/turtlebot/turtlebot
