--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,6 @@
 [submodule "turtlebot_apps"]
 	path = turtlebot_apps
 	url = https://github.com/turtlebot/turtlebot_apps
-[submodule "kobuki_desktop"]
-	path = kobuki_desktop
-	url = https://github.com/yujinrobot/kobuki_desktop
+[submodule "turtlebot_msgs"]
+	path = turtlebot_msgs
+	url = https://github.com/turtlebot/turtlebot_msgs
